
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct swsusp_info {scalar_t__ pages; } ;
struct swap_map_handle {int dummy; } ;
struct snapshot_handle {int dummy; } ;


 int EFAULT ;
 scalar_t__ PAGE_SIZE ;
 unsigned int SF_NOCOMPRESS_MODE ;
 scalar_t__ data_of (struct snapshot_handle) ;
 int get_swap_reader (struct swap_map_handle*,unsigned int*) ;
 int load_image (struct swap_map_handle*,struct snapshot_handle*,scalar_t__) ;
 int load_image_lzo (struct swap_map_handle*,struct snapshot_handle*,scalar_t__) ;
 int memset (struct snapshot_handle*,int ,int) ;
 int pr_debug (char*,...) ;
 int snapshot_write_next (struct snapshot_handle*) ;
 int swap_read_page (struct swap_map_handle*,struct swsusp_info*,int *) ;
 int swap_reader_finish (struct swap_map_handle*) ;

int swsusp_read(unsigned int *flags_p)
{
 int error;
 struct swap_map_handle handle;
 struct snapshot_handle snapshot;
 struct swsusp_info *header;

 memset(&snapshot, 0, sizeof(struct snapshot_handle));
 error = snapshot_write_next(&snapshot);
 if (error < (int)PAGE_SIZE)
  return error < 0 ? error : -EFAULT;
 header = (struct swsusp_info *)data_of(snapshot);
 error = get_swap_reader(&handle, flags_p);
 if (error)
  goto end;
 if (!error)
  error = swap_read_page(&handle, header, ((void*)0));
 if (!error) {
  error = (*flags_p & SF_NOCOMPRESS_MODE) ?
   load_image(&handle, &snapshot, header->pages - 1) :
   load_image_lzo(&handle, &snapshot, header->pages - 1);
 }
 swap_reader_finish(&handle);
end:
 if (!error)
  pr_debug("Image successfully loaded\n");
 else
  pr_debug("Error %d resuming\n", error);
 return error;
}
